# Manufacturing-Robot-Software-System

./: README.md
group7_final_project_multiple_orders/group7_final_project/: README.txt
group7_final_project_multiple_orders/group7_final_project/config/: final_project_a_working.yaml  final_project_exp2.yaml  sample_user_config.yaml
group7_final_project_single_order/group7_final_project/: CMakeLists.txt  package.xml
group7_rwa3/: CMakeLists.txt  README.md  README.txt  package.xml
group7_rwa3/config/: sample_user_config.yaml
group7_rwa3/include/: PickUp.h
group7_rwa3/launch/: group7_rwa3.launch
group7_rwa3/src/: listener.cpp
group7_rwa4/: CMakeLists.txt  README.md  README.txt  package.xml
group7_rwa4/config/: sample-rw4.yaml  sample_user_config.yaml
group7_rwa4/include/: AriacSensorManager.h  RobotController.h
group7_rwa4/launch/: group7_rwa4.launch
group7_rwa4/src/: AriacSensorManager.cpp  RobotController.cpp  main_node.cpp
group7_rwa5/: CMakeLists.txt  README.md  README.txt  package.xml
group7_rwa5/config/: sample-rwa5.yaml  sample_user_config.yaml
group7_rwa5/include/: AriacSensorManager.h  RobotController.h
group7_rwa5/launch/: group7_rwa5.launch
group7_rwa5/src/: AriacSensorManager.cpp  RobotController.cpp  main_node.cpp
rwa4/: CMakeLists.txt  ReadMe.txt
rwa4/config/: sample-rw4.yaml  sample_user_config.yaml
rwa4/include/: AriacSensorManager.h  MyCompetitionClass.h  RobotController.h
rwa4/launch/: rwa4.launch
rwa4/src/: AriacSensorManager.cpp  RobotController.cpp  main_node.cpp
(+13 files in other folders)
